--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Pages\Manage Datasets\LoadNewDatasetPage.cs" />
     <Compile Include="Pages\Manage Datasets\ManageDatasetsPage.cs" />
     <Compile Include="Pages\Manage Datasets\ManageTheDataPage.cs" />
+    <Compile Include="Pages\Manage Datasets\MapDataSourcesToDatasetsPage.cs" />
     <Compile Include="Pages\Manage Datasets\SpecifyDatasetRelationshipsPage.cs" />
     <Compile Include="Pages\Manage Specification\CreateCalculationPage.cs" />
     <Compile Include="Pages\Manage Specification\CreatePolicyPage.cs" />
