--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Pages\Manage Datasets\ManageTheDataPage.cs" />
     <Compile Include="Pages\Manage Datasets\MapDataSourcesToDatasetsPage.cs" />
     <Compile Include="Pages\Manage Datasets\SelectedSpecificationDataSourcePage.cs" />
+    <Compile Include="Pages\Manage Datasets\SelectSourceDatasetsPage.cs" />
     <Compile Include="Pages\Manage Datasets\SpecifyDatasetRelationshipsPage.cs" />
     <Compile Include="Pages\Manage Specification\CreateCalculationPage.cs" />
     <Compile Include="Pages\Manage Specification\CreatePolicyPage.cs" />
