--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -94,6 +94,8 @@
     <Compile Include="Pages\Manage Specification\CreateSpecificationPage.cs" />
     <Compile Include="Pages\Manage Specification\CreateSubPolicyPage.cs" />
     <Compile Include="Pages\Manage Specification\ManagePoliciesPage.cs" />
+    <Compile Include="Pages\View Results\ViewProviderAllocationsPage.cs" />
+    <Compile Include="Pages\View Results\ViewProviderResultsPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Features\HomePage.feature.cs">
       <AutoGen>True</AutoGen>
@@ -115,10 +117,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ManageSpecifications.feature</DependentUpon>
     </Compile>
+    <Compile Include="Tests\Features\ViewResults.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ViewResults.feature</DependentUpon>
+    </Compile>
     <Compile Include="Tests\Steps\HomePageSteps.cs" />
     <Compile Include="Tests\Steps\ManageCalculationsSteps.cs" />
     <Compile Include="Tests\Steps\ManageDatasetsSteps.cs" />
     <Compile Include="Tests\Steps\ManageSpecificationsSteps.cs" />
+    <Compile Include="Tests\Steps\ViewResultsSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -138,6 +146,10 @@
     <None Include="Tests\Features\ManageSpecifications.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ManageSpecifications.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Tests\Features\ViewResults.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ViewResults.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
