--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Pages\Quality Assurance\TestScenarioListPage.cs" />
     <Compile Include="Pages\View Results\ViewProviderAllocationsPage.cs" />
     <Compile Include="Pages\View Results\ViewProviderResultsPage.cs" />
+    <Compile Include="Pages\View Results\ViewResultsOptionsPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Features\HomePage.feature.cs">
       <AutoGen>True</AutoGen>
