--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
@@ -10,5 +10,10 @@
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
   <package id="SpecFlow.MsTest" version="2.2.1" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
