--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Pages\Manage Specification\ManagePoliciesPage.cs" />
     <Compile Include="Pages\Quality Assurance\CreateQATestPage.cs" />
     <Compile Include="Pages\Quality Assurance\TestScenarioListPage.cs" />
+    <Compile Include="Pages\View Results\ViewCalculationResultPage.cs" />
     <Compile Include="Pages\View Results\ViewTestResultsAllProvidersSingleTest.cs" />
     <Compile Include="Pages\View Results\ViewProviderAllocationsPage.cs" />
     <Compile Include="Pages\View Results\ViewProviderResultsPage.cs" />
