--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Pages\Manage Calculation\EditCalculationsPage.cs" />
     <Compile Include="Pages\Manage Calculation\ManageCalculationPage.cs" />
     <Compile Include="Pages\Manage Datasets\ChooseDatasetRelationshipPage.cs" />
+    <Compile Include="Pages\Manage Datasets\DownloadDataSchemasPage.cs" />
     <Compile Include="Pages\Manage Datasets\LoadNewDatasetPage.cs" />
     <Compile Include="Pages\Manage Datasets\ManageDatasetsPage.cs" />
     <Compile Include="Pages\Manage Datasets\ManageTheDataPage.cs" />
