--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -102,7 +102,9 @@
     <Compile Include="NavigateTo.cs" />
     <Compile Include="Pages\Approve funding\ApprovePublishFundingPage.cs" />
     <Compile Include="Pages\Approve funding\ChooseFundingSpecificationPage.cs" />
+    <Compile Include="Pages\Approve funding\ConfirmApprovalPage.cs" />
     <Compile Include="Pages\Approve funding\ConfirmChoosenSpecificationPage.cs" />
+    <Compile Include="Pages\Approve funding\ConfirmPublishPage.cs" />
     <Compile Include="Pages\Home Page\ApprovalOptionsPage.cs" />
     <Compile Include="Pages\Home Page\HomePage.cs" />
     <Compile Include="Pages\Home Page\ManageSpecificationPage.cs" />
