--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
@@ -5,9 +5,11 @@
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="PhantomJS" version="2.1.1" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.41" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net461" />
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.42.0.1" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
   <package id="SpecFlow.MsTest" version="2.2.1" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
