--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/Frontend.IntegrationTests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Helpers\TestDataUtils.cs" />
     <Compile Include="NavigateTo.cs" />
     <Compile Include="Pages\Approve funding\ApprovePublishFundingPage.cs" />
+    <Compile Include="Pages\Approve funding\ApprovePublishSelectorPage .cs" />
     <Compile Include="Pages\Approve funding\ChooseFundingSpecificationPage.cs" />
     <Compile Include="Pages\Approve funding\ConfirmApprovalPage.cs" />
     <Compile Include="Pages\Approve funding\ConfirmChoosenSpecificationPage.cs" />
