--- a/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
+++ b/Frontend.IntegrationTests/Frontend.IntegrationTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CalculateFunding.Common" version="1.5.0" targetFramework="net461" />
+  <package id="CalculateFunding.Common.ApiClient" version="1.0.2" targetFramework="net461" />
+  <package id="CalculateFunding.Common.ApiClient.Users" version="1.0.2" targetFramework="net461" />
   <package id="FluentAssertions" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net461" />
@@ -22,7 +24,7 @@
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.42.0.1" targetFramework="net461" />
-  <package id="Serilog" version="2.5.0" targetFramework="net461" />
+  <package id="Serilog" version="2.7.1" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
   <package id="SpecFlow.MsTest" version="2.2.1" targetFramework="net461" />
